# bm-probability-distributions

./: README.md  pyproject.toml
src/bm/probability_distributions/: __init__.py  datasets.py  distribution.py
src/bm/probability_distributions/distributions/: __init__.py  binomial.py  normal.py  uniform.py
src/boring_math/probability_distributions/: datasets.py  distribution.py
src/boring_math/probability_distributions/distributions/: binomial.py  normal.py  uniform.py
